Bug 97614 - Impress Remote does not work with LibreOffice 5
Summary: Impress Remote does not work with LibreOffice 5
Status: RESOLVED FIXED
Alias: None
Product: Impress Remote
Classification: Unclassified
Component: Android Remote App (show other bugs)
Version:
(earliest affected)
2.2.3
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-02-07 02:11 UTC by Thomas K
Modified: 2020-03-02 09:02 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
adb logcat output (720.70 KB, text/plain)
2020-03-02 08:53 UTC, Johannes Rohr
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas K 2016-02-07 02:11:00 UTC
Hello,

Using LibreOffice 5.0.4.2 on Windows 7, Impress Remote will not connect over Bluetooth or Wifi, either from my phone (Nexus 5) or my tablet (Samsung Galaxy Note 10.1).

It used to work perfectly with LibreOffice 4, and I've never been able to make it work with LibreOffice 5.

Is it a know issue ? I could not find any indication on that anywhere.

Thanks

TK
Comment 1 Dude76 2016-03-09 22:02:10 UTC
I have the same problem.

-the smartphone is correctly paired with the OS
-The Impress remote app on the smartphone see the computer but fail to connect (bluetooth / wifi)


-Same computer (Asus G73Sw), same smartphone (GT-I9305 / official Samsung Kikat).
-Was working with Impress (4.x) / Win 7 x64.
-Doesn't work anymore with Impress 5.1.0.3 (x64) / Windows 10 x64.

I will soon make an other test with my firewall (Comodo) uninstalled, just in case of.

When googling the problem, i found few but recent occurrences of this problem, all with LO 5.

Regards.
Dude76.
Comment 2 Robinson Tryon (qubit) 2016-03-10 00:03:06 UTC
Summary -> (mention Impress Remote)
Comment 3 darethehair@gmail.com 2016-09-29 21:12:55 UTC
Just to add a few more thoughts: a working bluetooth connection can be established in my case (i.e. between my Linux laptop/desktop and a Nexus 4) -- but the LibreOffice Impress remote control app is unable to 'connect' (whatever it is trying to do) to function.  The 'wifi' side of this app works fine for me.

I believe that I am using a new enough version (5+) of LibreOffice that any incompatibilities between it and BlueZ were already ironed out.  Nevertheless, it does not work -- and it would be so great if it did!
Comment 4 Pander 2017-02-14 20:42:39 UTC
Same problem on Android 6.0.1 CM 13.1.2 with LibreOffice Impress version 1:5.2.2-0ubuntu2

Perhaps build of latest version fixes this? See https://gerrit.libreoffice.org/gitweb?p=impress_remote.git;a=summary
Comment 5 Bastián Díaz 2018-01-23 20:08:51 UTC
I have also had similar problems, but unlike other comments, only the bluetooth connection fails (the connection via WiFi works fine).

I honestly could not express exactly when it happens, since I stopped using Impress Remote during the holidays and only now to practice a presentation, I noticed that simply the connection via bluetooth doesn't work.

I did several tests with the following devices and software versions:

Samsung Galaxy Tab 7' (Android 4.2.2)
Samsung Galaxy Ace J1 (Android 5.1.1)

HP x360 (Solus OS 3 Budgie & Windows 10)
Acer E111 (Fedora Workstation 27)

Impress Remote for Android 2.2.3 v17 & 2.2.3.0 v19 beta
LO 5.4.4 (Windows 10), LO 5.4.3.2 (Solus), LO 5.4.4.2 (fedora)

LibreOfficeDev 6.1.0.0 alpha0+ build facfc2951ea9f4745edd4a6fb1cf97697f33f40a

In all cases the bluetooth connection worked properly, being able to transfer files or exchange audio devices, however, when trying to connect LO with Impress Remote it failed.
Comment 7 Thomas K 2018-04-05 11:11:46 UTC
Hi Samuel and thanks for the proposed fix,

I had big hopes when updating LibreOffice today but unfortunately it still does not work for me using LibreOffice 6.0.2.1 x64 (which includes your fix as far as I know) on Win7, with Impress Remote 2.2.3 or 2.3.0b.

The connection fails immediately on Bluetooth and Wifi.

If I attempt a connection via Wifi when the ports are closed on the computer, the app spins and fails after a few seconds. If during that time I open the ports, it fails immediately after.

If there is anything I can do to help you find out what the problem is (maybe there is a log file somewhere?) feel free to let me know.

Thanks again

Thomas
Comment 8 Samuel Mehrbrodt 2018-04-05 12:33:50 UTC
I asked the author of the patch (I didn't author it) and here's the answer:

"There is updated version of android app that has this problem fixed. Unfortunately it does not show slides preview and is not released yet."

Closing this again, the problem in LO is fixed.
Comment 9 Callegar 2018-12-19 15:52:06 UTC
I apologize, but this all is rather unclear.

The patch is against Libreoffice (the PC application) or the Impress Remote (the Android application). It seems to be against the former. If the problem is in the Libreoffice application, seems weird that a new version of the latter fixes the issue.

Incidentally, for me it is evidently the LibO part that cannot talk to the bluetooth stack in my PC as per bug 120663.
Comment 10 Callegar 2018-12-19 15:54:37 UTC
To summarize: when I run impress (now 6.1.4.2) it tries to talk to the bluetooth stack and fails, leaving me with a

RFCOMM server failed for LibreOffice Impress Remote: rfcomm_bind: Address already in use (98)

in the system log.
Comment 11 Johannes Rohr 2020-03-02 08:53:29 UTC
Created attachment 158299 [details]
adb logcat output

adb log taken while impress remote tries and fails to connect to a paired bluetooth device
Comment 12 Johannes Rohr 2020-03-02 09:02:26 UTC
(In reply to Johannes Rohr from comment #11)
> Created attachment 158299 [details]
> adb logcat output
> 
> adb log taken while impress remote tries and fails to connect to a paired
> bluetooth device

Sorry, wrong issue report.