tdf#97614 Fixing initialization code for Bluetooth and IP Server for Impress.

Change-Id: Icc385fb760b8a5ff337f58dc95ba3c3f86805eaa
Reviewed-on: https://gerrit.libreoffice.org/50108
Reviewed-by: Michael Stahl <mstahl@redhat.com>
Tested-by: Jenkins <ci@libreoffice.org>
(cherry picked from commit fb5f13671c50f7f84d654a779bc0ff07e31ce95e)
Reviewed-on: https://gerrit.libreoffice.org/50414
(cherry picked from commit 424eb9e4282596818ed39943b9d4a64cb6888eef)